# duckdb-bench-damon2026

./: .gitignore  .gitmodules  CMakeLists.txt  benchmark.py  explain.py  generate.py  networkThroughput  plot.py  plot_minio_vs_local_by_threads_avg.py  plot_per_query_runtime.py  requirements.txt  run_all.sh  s3_connection
extension/: CMakeLists.txt  Makefile  extension_config.cmake
extension/src/: view_rewriter_extension.cpp
extension/src/include/: view_rewriter_extension.hpp
measurements_clean/queries_tpch30/: 1773159001639074021.json  1773159069914740463.json
measurements_clean/throughput_tpch30/: 1773151358565866976.json  1773151508480364773.json  1773151760978745905.json  1773152008085407977.json  1773152342449186594.json  1773152672693088730.json  1773153085724208563.json  1773153494439482902.json  1773153586956097348.json  1773153674384633342.json  1773153826186982472.json  1773153973650121722.json  1773154186692192986.json  1773154395748090824.json  1773154670375546755.json  1773154941292476720.json  1773156026078019930.json  1773156098977519629.json  1773156221473468428.json  1773156342590160255.json  1773156516120642410.json  1773156688340002232.json  1773156915906264618.json  1773157142006700201.json
oldTryes/: measure_minio_read_throughput.py
sql/tpch/filtered_queries/: q01.sql  q02.sql  q03.sql  q04.sql  q05.sql  q06.sql  q07.sql  q08.sql  q09.sql  q10.sql  q11.sql  q12.sql  q13.sql  q14.sql  q15.sql  q16.sql  q17.sql  q19.sql  q20.sql  q21.sql  q22.sql
src/: common.hpp  networkThroughput.cpp  queries.cpp  s3_connection.cpp  throughput.cpp
(+46 files in other folders)
